<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadow_black"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginStart="@dimen/_25dp"
        android:layout_marginLeft="@dimen/_25dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginRight="@dimen/_25dp"
        android:gravity="end"
        app:autoSizeMaxTextSize="@dimen/_70sp"
        app:autoSizeMinTextSize="@dimen/_12sp"
        app:autoSizeStepGranularity="@dimen/_2sp"
        app:autoSizeTextType="uniform"
        android:textColor="@color/white"
        android:textSize="@dimen/_50sp"
        app:layout_constraintBottom_toTopOf="@id/tvOperation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignBox"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginLeft="@dimen/_20dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_40sp"
        app:layout_constraintBottom_toTopOf="@id/btnClear"
        app:layout_constraintEnd_toStartOf="@id/tvOperation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAnswer" />


    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginStart="@dimen/_50dp"
        android:layout_marginLeft="@dimen/_50dp"
        android:layout_marginEnd="@dimen/_25dp"
        android:layout_marginRight="@dimen/_25dp"
        app:autoSizeMaxTextSize="@dimen/_70sp"
        app:autoSizeMinTextSize="@dimen/_12sp"
        app:autoSizeStepGranularity="@dimen/_2sp"
        app:autoSizeTextType="uniform"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sp"
        app:layout_constraintBottom_toTopOf="@id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAnswer" />


    <!-- first row-->
    <TextView
        android:id="@+id/btnClear"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="clear"
        android:text="@string/c"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnSeven"
        app:layout_constraintEnd_toStartOf="@id/btnPlusMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOperation" />

    <TextView
        android:id="@+id/btnPlusMinus"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:gravity="center"
        android:onClick="plusMinus"
        android:text="@string/plusMinus"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintEnd_toStartOf="@id/btnPercentage"
        app:layout_constraintStart_toEndOf="@id/btnClear"
        app:layout_constraintTop_toBottomOf="@id/tvOperation"
        android:focusable="true" />


    <TextView
        android:id="@+id/btnPercentage"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="percentage"
        android:text="@string/Percentage"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnNine"
        app:layout_constraintEnd_toStartOf="@id/btnDivision"
        app:layout_constraintStart_toEndOf="@id/btnPlusMinus"
        app:layout_constraintTop_toBottomOf="@id/tvOperation" />

    <TextView
        android:id="@+id/btnDivision"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="division"
        android:text="@string/Division"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnMultiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPercentage"
        app:layout_constraintTop_toBottomOf="@id/tvOperation" />

    <!-- second row-->

    <TextView
        android:id="@+id/btnSeven"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="seven"
        android:text="@string/Seven"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnEight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClear" />

    <TextView
        android:id="@+id/btnEight"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="eight"
        android:text="@string/Eight"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnFive"
        app:layout_constraintEnd_toStartOf="@id/btnNine"
        app:layout_constraintStart_toEndOf="@id/btnSeven"
        app:layout_constraintTop_toBottomOf="@id/btnClear" />

    <TextView
        android:id="@+id/btnNine"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="nine"
        android:text="@string/Nine"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintEnd_toStartOf="@id/btnMultiplication"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintTop_toBottomOf="@id/btnClear" />

    <TextView
        android:id="@+id/btnMultiplication"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="multiplication"
        android:text="@string/Multiplication"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnSubtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNine"
        app:layout_constraintTop_toBottomOf="@id/btnClear" />

    <!-- third row-->
    <TextView
        android:id="@+id/btnFour"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="four"
        android:text="@string/Four"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnFive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSeven" />

    <TextView
        android:id="@+id/btnFive"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="five"
        android:text="@string/Five"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintEnd_toStartOf="@id/btnSix"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintTop_toBottomOf="@id/btnSeven" />

    <TextView
        android:id="@+id/btnSix"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="six"
        android:text="@string/Six"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnThree"
        app:layout_constraintEnd_toStartOf="@id/btnSubtraction"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintTop_toBottomOf="@id/btnSeven" />

    <TextView
        android:id="@+id/btnSubtraction"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="subtraction"
        android:text="@string/Subtraction"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnAddition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSix"
        app:layout_constraintTop_toBottomOf="@id/btnSeven" />

    <!-- forth row-->
    <TextView
        android:id="@+id/btnOne"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="one"
        android:text="@string/One"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFour" />

    <TextView
        android:id="@+id/btnTwo"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="two"
        android:text="@string/Two"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnDot"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toBottomOf="@id/btnFour" />

    <TextView
        android:id="@+id/btnThree"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="three"
        android:text="@string/Three"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnBackspace"
        app:layout_constraintEnd_toStartOf="@id/btnAddition"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toBottomOf="@id/btnFour" />

    <TextView
        android:id="@+id/btnAddition"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="addition"
        android:text="@string/Addition"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@id/btnEqualTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnThree"
        app:layout_constraintTop_toBottomOf="@id/btnFour" />

    <!-- fifth row-->
    <TextView
        android:id="@+id/btnZero"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="zero"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOne" />

    <TextView
        android:id="@+id/btnDot"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="dot"
        android:text="@string/Dot"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnBackspace"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintTop_toBottomOf="@id/btnOne" />

    <ImageView
        android:id="@+id/btnBackspace"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:gravity="center"
        android:onClick="backspace"
        android:scaleType="center"
        android:src="@drawable/ic_backspace_dark"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEqualTo"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintTop_toBottomOf="@id/btnOne" />

    <TextView
        android:id="@+id/btnEqualTo"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_key_dark"
        android:clickable="true"
        android:gravity="center"
        android:onClick="equalTo"
        android:text="@string/EqualTo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBackspace"
        app:layout_constraintTop_toBottomOf="@id/btnOne"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>